@@ -205,7 +205,6 @@
     <Compile Include="Providers\IProviderFactory.cs" />
     <Compile Include="Process\MigrationBatch.cs" />
     <Compile Include="Migrator.cs" />
-    <Compile Include="Providers\AddedColumn.cs" />
     <Compile Include="Providers\IProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SqlServerProvider.cs" />
