@@ -1,6 +1,7 @@
 1.1.0 - Added support for SQLite
       - Int64 can be used as data type in primary keys
 	  - Restricted usage of .AsIdentity() to Int32 and Int64 data typed columns
+	  - Removed .AsIdentity() option when adding columns (was not implemented consistently and was missing integration testing and constitues a super special-case which is hard to implement consistently for all platforms)
       - IProvider: added the DropDefault method which replaces the AddedColumn.DropThereafter and gives the providers
 	    more flexibility to report what they support and what not
       - Teradata: raise validation error on adding/dropping primary keys (Teradata does not support that)
